Edit page no longer automatically loops. Scrollbar no longer hidden.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,8 +12,6 @@
  *= require_tree .
  */
 
-::-webkit-scrollbar { display: none; }
-
 .centerbox {  margin-right: auto; 
   margin-left: auto; 
   width: 640px; 
